setting page hint message width fixed. to allow only number for input value on ios environment.

--- a/static/css/setting.css
+++ b/static/css/setting.css
@@ -206,6 +206,7 @@ button, input.save-button, .save-button{
 	padding-top: 12px;
 	color: #BBBCBE;
 	font-size: 17px;
+	width:85%;
 }
 .unit{
 	padding-left: 5px;
@@ -217,7 +218,7 @@ button, input.save-button, .save-button{
 	border:none;
 	outline:none;
 	font-size: 18.5px;
-	width: 90px;
+	width: 100px;
 	text-align: right;
 	border-radius: 0 !important;
 }
